# ImageIO

./: .gitignore  .gitmodules  BitmapImpl.h  CMakeLists.txt  IBitmap.h  ImageIO.sln  ImageIO.vcxproj  ImageIO.vcxproj.filters  ThirdPartyNotices.txt  loadImage.cpp  loadImage.h  loadJpeg.cpp  loadJpeg.h  loadPng.cpp  loadPng.h  readBinaryFile.cpp  readBinaryFile.h  saveImage.cpp  saveImage.h
cmake/: FindJpegTurbo.cmake
